# mtg_kimgdom

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  REQUIREMENTS.md  app.py  docker-compose.yml  extract_cards.py  game.py  ocr_cards.py  pyproject.toml
.github/workflows/: docker.yml  test.yml
src/mtg_kimgdom/: __main__.py  app.py  game.py
src/mtg_kimgdom/static/: style.css
src/mtg_kimgdom/templates/: _card.html  _rules.html  index.html  join.html  king_card.html  role.html  share.html
src/mtg_kimgdom/variants/: __init__.py  advanced_kingdoms_156.py  advanced_kingdoms_200.py
static/: style.css
templates/: _card.html  base.html  index.html  join.html  role.html  share.html
tests/: test_game.py
