[project]
name = "mtg-kimgdom"
version = "0.1.0"
description = "Self-hosted web app for playing Advanced Kingdoms, the hidden-role EDH variant"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.9",
    "ty>=0.0.28",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ty]
