[project]
name = "mtg-kimgdom"
version = "0.1.0"
description = "Self-hosted web app for playing Advanced Kingdoms, the hidden-role EDH variant"
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "flask>=3.1.3",
    "gunicorn>=25.3.0",
]

[project.optional-dependencies]
ocr = [
    "pillow>=12.2.0",
    "pymupdf>=1.27.2.2",
    "pytesseract>=0.3.13",
]

[project.scripts]
mtg-kingdom = "mtg_kimgdom.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mtg_kimgdom"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.15.9",
    "ty>=0.0.28",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
# variant modules contain long string literals (card text, tips, clarifications)
"src/mtg_kimgdom/variants/*.py" = ["E501"]

[tool.ty]
